Change copy, add links, fix layout bugs

--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -1,10 +1,10 @@
 html {
   font-size: 20px;
   font-family: "aglet-slab", sans-serif;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
   overflow-x: hidden;
   overflow-y: auto;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
 }
 
 * {
@@ -18,6 +18,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow-x: hidden;
+  overflow-y: auto;
 
   padding: 8em 1em;
   @media screen and (min-width: $tablet) {
