--- a/src/css/tile-content.scss
+++ b/src/css/tile-content.scss
@@ -9,8 +9,12 @@
 
 .tile--content {
   padding: 1rem;
-  font-size: 28px;
+  font-size: 26px;
   line-height: 1.3;
+  
+  @media screen and (min-width: 1440px) {
+    font-size: 28px;
+  }
 
   h1 {
     display: inline;
@@ -21,15 +25,26 @@
     font-weight: bold;
   }
   
-  p + p{
+  p + p {
     margin-top: 1em;
+  }
+
+  a {
+    will-change: border-bottom-color;
+    text-decoration: none;
+    border-bottom: solid 2px rgba(color('tile-text'), 0.3);
+    color: inherit;
+    transition: border-bottom-color 100ms ease-in-out;
+    &:hover {
+      border-bottom-color: color('tile-text');
+    }
   }
   
 }
 
 .tile--tickets form {
 
-  margin-top: .3em;
+  margin-top: .15em;
 
   input[type='email'] {
     display: block;
@@ -42,12 +57,13 @@
     font-size: 1em;
     line-height: normal;
     width: 100%;
-    padding-bottom: .25em;
-    border-bottom: solid 2px;
+    border-bottom: solid 2px rgba(color('tile-text'), 0.65);
     font-weight: bold;
+    padding: .25em 0;
 
     &:focus {
       outline: none;
+      border-bottom-color: inherit;
     }
 
     &::placeholder {
@@ -57,7 +73,7 @@
   }
 
   button {
-    margin-top: .75em;
+    margin-top: 1em;
     display: block;
     width: 100%;
     transition: all 150ms ease-in-out;
@@ -74,6 +90,7 @@
     text-align: left;
     display: flex;
     cursor: pointer;
+    will-change: opacity, transform;
     
 
     &:after {
@@ -93,6 +110,7 @@
   // Hide button if field is empty and unfocused
   input:placeholder-shown:not(:focus) + button {
     opacity: 0;
+    transform: translateY(.25em);
   }
   
   
@@ -106,22 +124,14 @@
 
 .tile--credit {
 
+  display: flex;
+
   text-align: right;
   @media screen and (min-width: $tablet)  { text-align: left; }
   @media screen and (min-width: $desktop) { text-align: right; }
 
   .tile__wrapper {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-  }
-
-  a {
-    text-decoration: none;
-    color: inherit;
-    &:hover {
-      text-decoration: underline;
-    }
+    flex: 1;
+    margin-top: auto;
   }
 }
